--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -4,3 +4,59 @@
         sex:
           man: "男性"
           woman: "女性"
+          
+      institution:
+        area:
+          ho: "北海道"
+          ao: "青森"
+          iw: "岩手"
+          mi: "宮城"
+          ak: "秋田"
+          ym: "山形"
+          hk: "福島"
+          ib: "茨城"
+          to: "栃木"
+          gu: "群馬"
+          sa: "埼玉"
+          ti: "千葉"
+          to: "東京"
+          ka: "神奈川"
+          ni: "新潟"
+          to: "富山"
+          is: "石川"
+          hu: "福井"
+          ya: "山梨"
+          na: "長野"
+          gi: "岐阜"
+          si: "静岡"
+          ai: "愛知"
+          mi: "三重"
+          si: "滋賀"
+          ky: "京都"
+          oo: "大阪"
+          hy: "兵庫"
+          na: "奈良"
+          wa: "和歌山"
+          to: "鳥取"
+          si: "島根"
+          ok: "岡山"
+          hi: "広島"
+          ya: "山口"
+          to: "徳島"
+          ka: "香川"
+          eh: "愛媛"
+          ko: "高知"
+          hu: "福岡"
+          sa: "佐賀"
+          na: "長崎"
+          ku: "熊本"
+          oo: "大分"
+          mi: "宮崎"
+          ka: "鹿児島"
+          ok: "沖縄"
+          
+          
+          
+          
+          
+      
