--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,4 +1,8 @@
   ja:
+    activerecord:
+      errors:
+        messages:
+          record_invalid: "バリデーションエラー: %{errors}"
     enums:
       user:
         sex:
@@ -7,53 +11,53 @@
           
       institution:
         area:
-          ho: "北海道"
-          ao: "青森"
-          iw: "岩手"
-          mi: "宮城"
-          ak: "秋田"
-          ym: "山形"
-          hk: "福島"
-          ib: "茨城"
-          to: "栃木"
-          gu: "群馬"
-          sa: "埼玉"
-          ti: "千葉"
-          to: "東京"
-          ka: "神奈川"
-          ni: "新潟"
-          to: "富山"
-          is: "石川"
-          hu: "福井"
-          ya: "山梨"
-          na: "長野"
-          gi: "岐阜"
-          si: "静岡"
-          ai: "愛知"
-          mi: "三重"
-          si: "滋賀"
-          ky: "京都"
-          oo: "大阪"
-          hy: "兵庫"
-          na: "奈良"
-          wa: "和歌山"
-          to: "鳥取"
-          si: "島根"
-          ok: "岡山"
-          hi: "広島"
-          ya: "山口"
-          to: "徳島"
-          ka: "香川"
-          eh: "愛媛"
-          ko: "高知"
-          hu: "福岡"
-          sa: "佐賀"
-          na: "長崎"
-          ku: "熊本"
-          oo: "大分"
-          mi: "宮崎"
-          ka: "鹿児島"
-          ok: "沖縄"
+          hokkaido: "北海道"
+          aomori: "青森"
+          iwate: "岩手"
+          miyagi: "宮城"
+          akita: "秋田"
+          yamagata: "山形"
+          hukusima: "福島"
+          ibaraki: "茨城"
+          tochigi: "栃木"
+          gunma: "群馬"
+          saitama: "埼玉"
+          tiba: "千葉"
+          tokyo: "東京"
+          kanagawa: "神奈川"
+          niigata: "新潟"
+          toyama: "富山"
+          isikawa: "石川"
+          hukui: "福井"
+          yamanasi: "山梨"
+          nagano: "長野"
+          gifu: "岐阜"
+          sizuoka: "静岡"
+          aichi: "愛知"
+          mie: "三重"
+          siga: "滋賀"
+          kyoto: "京都"
+          oosaka: "大阪"
+          hyogo: "兵庫"
+          nara: "奈良"
+          wakayama: "和歌山"
+          tottori: "鳥取"
+          simane: "島根"
+          okayama: "岡山"
+          hirosima: "広島"
+          yamaguti: "山口"
+          tokusima: "徳島"
+          kagawa: "香川"
+          ehime: "愛媛"
+          kouti: "高知"
+          hukuoka: "福岡"
+          saga: "佐賀"
+          nagasaki: "長崎"
+          kumamoto: "熊本"
+          ooita: "大分"
+          miyazaki: "宮崎"
+          kagosima: "鹿児島"
+          okinawa: "沖縄"
           
           
           
